# WorldWeaver-System

./: .dockerignore  .gitignore  Dockerfile  README.md  README_EN.md  README_JA.md  docker-compose.yml  main.py  pyproject.toml  run_server.py  story_graph.graphml  stroy_generator.py  stroy_generator_langchain.py  visualize_graph.py
docs/: CHANGELOG.md  architecture.md  getting-started.md  npc-system.md  worldbuilding.md
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.css  App.tsx  i18n.ts  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CombatView.tsx  DialogueView.tsx  EndingView.tsx  GameOverView.tsx  MarkdownText.tsx  Sidebar.tsx  StoryView.tsx  ThemeBuilder.tsx  TitleScreen.tsx  TypewriterText.tsx  WorldMap.tsx
lore_documents/: core_systems.txt  worldbuilding.txt
lore_documents/synapse_collapse/: knowledge_graph.graphml  synapse_protocol0.txt
lore_documents/synapse_reckoning/: knowledge_graph.graphml
prompts/: ending_template.json  game_config.json  npc_dialogue.json  rules.json  story_template.json  theme_builder.json
prompts/themes/: mythology.json  synapse_collapse.json
worldweaver/: chain.py  combat.py  config.py  content_filter.py  ending.py  game.py  graph.py  i18n.py  item_graph.py  judgment.py  llm_factory.py  models.py  npc_memory.py  persona.py  prompt_loader.py  rag.py  rule_engine.py  save_load.py  theme_builder.py  translate.py  world_state.py
worldweaver/api/: server.py  session_manager.py
worldweaver_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
